system controller update and book logics update